# rlox

./: .gitignore  Cargo.toml  README.md  index.html
.cargo/: config.toml
.github/workflows/: pages.yml
crates/ast-gen/: Cargo.toml
crates/ast-gen/src/: lib.rs
crates/bytecode/: Cargo.toml
crates/bytecode/src/: chunk.rs  compiler.rs  debug.rs  enviroment.rs  error.rs  heap.rs  lib.rs  object.rs  scanner.rs  value.rs  vm.rs
crates/bytecode/tests/: _bytecode_test_runner.rs  class_01.lox  class_02.lox  class_03.lox  class_04.lox  class_05.lox  class_06.lox  closure_01.lox  closure_02.lox  closure_03.lox  closure_04.lox  equality.lox  factorial.lox  fib.lox  for.lox  hello_world.lox  if.lox  if_else.lox  superclass_01.lox  superclass_02.lox  superclass_03.lox  superclass_04.lox  superclass_05.lox  test_gc.lox  while.lox
crates/rlox/: Cargo.toml
crates/rlox/src/: lib.rs  main.rs
crates/tree-walk/: Cargo.toml
crates/tree-walk/src/: ast.rs  callable.rs  enviroment.rs  interpreter.rs  lib.rs  parser.rs  resolver.rs  scanner.rs  token.rs
examples/: if_else.lox
pages/: index.html  styles.css
pages/examples/: factorial.lox  fib.lox  hello_world.lox
rlox/: rlox_lib.d.ts  rlox_lib.js  rlox_lib_bg.js  rlox_lib_bg.wasm
src/: ast.rs  callable.rs  enviroment.rs  generate_ast.rs  interpreter.rs  lib.rs  main.rs  parser.rs  resolver.rs  scanner.rs  token.rs  token_type.rs
test/: class.lox  fib_iter.lox  fib_rec.lox  for.lox  test_expr.lox
