[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "rlox"

[lib]
crate-type = ["cdylib"]
name = "rlox_lib"

[dependencies]
tree-walk = { path = "../tree-walk" }
bytecode = { path = "../bytecode" }

wasm-bindgen = "0.2.78"
